# PiTrac

./: .gitattributes  .gitignore  .gitmodules  LICENSE.MODEL.md  README.md  detect_pi_cameras.sh
Software/GroundTruthAnnotator/: CMakeLists.txt  QUICK_START.md  launch_annotator.bat  pitrac_ml.py
Software/GroundTruthAnnotator/experiments/high_performance_300e/: args.yaml
Software/GroundTruthAnnotator/experiments/high_performance_300e2/: args.yaml  results.csv
Software/GroundTruthAnnotator/experiments/high_performance_v2/: args.yaml  results.csv
Software/GroundTruthAnnotator/experiments/max_accuracy_native_res/: args.yaml
Software/GroundTruthAnnotator/experiments/max_accuracy_native_res2/: args.yaml  results.csv
Software/GroundTruthAnnotator/experiments/maximum_performance_v3/: args.yaml  results.csv
Software/GroundTruthAnnotator/experiments/optimal_aspect_ratio_v1/: args.yaml  results.csv
Software/GroundTruthAnnotator/experiments/training_v1.0_20250807_134750/: args.yaml  results.csv
Software/GroundTruthAnnotator/unprocessed_training_images/: README.md
Software/GroundTruthAnnotator/yolo/: README.md  config_high_performance_300e.yaml  config_high_performance_v2.yaml  config_max_accuracy_native_res.yaml  config_maximum_performance_v3.yaml  config_optimal_aspect_ratio_v1.yaml  config_training_v1.0_20250807_134750.yaml  golf_balls.yaml
Software/GroundTruthAnnotator/yolo/labels/dual_strobe/: 2bit_7strobe.txt  4bit_7strobe.txt
Software/GroundTruthAnnotator/yolo/labels/multi_pulse/: 1bit_10pulse.txt  2bit_10pulse.txt  3bit_10pulse.txt  4bit_10pulse.txt  (+3 more)
(+865 files in other folders)
